--- a/about-style.css
+++ b/about-style.css
@@ -1,6 +1,6 @@
-body {
+body, html{
   margin: 0;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   background: url('image2.jpg') no-repeat center center/cover;
   color: #333;
 }
