--- a/contact-style.css
+++ b/contact-style.css
@@ -3,13 +3,16 @@
   margin: 0;
   padding: 0;
 }
-
-body {
-  font-family: Arial, sans-serif;
+* {
+  font-family: 'Courier New', Courier, monospace;
+}
+body, html {
+  font-family: 'Courier New', Courier, monospace;
   background-color: #f4f4f4;
   padding: 2rem;
   color: #333;
 }
+
 header {
   background-color: #fff;
   display: flex;
@@ -18,6 +21,7 @@ header {
   padding: 1rem 2rem;
   border-bottom: 2px solid #ccc;
 }
+
 .container {
   max-width: 900px;
   margin: auto;
@@ -84,7 +88,7 @@ button:hover {
   background-color: #f9f9f9;
   padding: 1.5rem;
   border-radius: 5px;
-  border-left: 5px solid  #a4c639;
+  border-left: 5px solid #a4c639;
 }
 
 .info h3 {
